--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <main id="maincontent" tabindex="1">
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application"></div>
     </section>
     <section tabindex="2">
       <div class="filter-options">
