--- a/restaurant.html
+++ b/restaurant.html
@@ -19,12 +19,12 @@
     <!-- Beginning nav -->
     <nav>
       <h1><a href="/">Restaurant Reviews</a></h1>
-    </nav>
-    <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" tabindex="0">
-      <li><a href="/">Home</a></li>
-    </ul>
-    <!-- End breadcrumb -->
+      <!-- Beginning breadcrumb -->
+      <ul id="breadcrumb" tabindex="0">
+        <li><a href="/">Home</a></li>
+      </ul>
+      <!-- End breadcrumb -->
+    </nav><!--  -->
     <!-- End nav -->
   </header>
   <!-- End header -->
@@ -33,12 +33,12 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+    <section id="restaurant-container" role="none">
+      <h2 id="restaurant-name"></h2>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
