--- a/restaurant.html
+++ b/restaurant.html
@@ -17,10 +17,10 @@
   <!-- Beginning header -->
   <header tabindex="0">
     <!-- Beginning nav -->
-    <nav>
+    <nav id="breadcrumb" role="navigation" aria-label="Breadcrumb">
       <h1><a href="/">Restaurant Reviews</a></h1>
       <!-- Beginning breadcrumb -->
-      <ul id="breadcrumb" tabindex="0">
+      <ul>
         <li><a href="/">Home</a></li>
       </ul>
       <!-- End breadcrumb -->
@@ -33,7 +33,7 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map" role="application"></div>
+      <div id="map" role="application" aria-label="location"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
@@ -63,7 +63,7 @@
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
-  <script type="text/javascript" src="js/restaurant_info.js"></script>AIzaSyDGUWD_SkIAdfRuO175gFcY_VOpbhvvbJc
+  <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGUWD_SkIAdfRuO175gFcY_VOpbhvvbJc&libraries=places&callback=initMap"></script> -->
   <!-- End scripts -->
